--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Premier Webpack</title>
-
-    <script src="dist/bundle.js"></script>
+    <script src="dist/index.bundle.js"></script>
+    <script src="dist/vendor.bundle.js"></script>
 </head>
 
 <body>
